[tool.poetry]
name = "agropolit"
version = "0.1.0"
description = ""
authors = ["Bohdan Myronov <bohdanmyronov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
